-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs22
-
Component/s: hotspot
-
b05
-
x86
-
solaris_10
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2215470 | 8 | Tom Rodriguez | P4 | Resolved | Fixed | b08 |
| JDK-2214878 | 7u2 | Tom Rodriguez | P4 | Closed | Fixed | b08 |
In looking for my classDefNotFound bug I tried the latest build I could find for bsd port.
The 0609 version worked at least past this point but the 0808 version gave a fatal error
# fatal error: memory leak: allocating without ResourceMark
V [libjvm.dylib+0x22ebd] VMError::report_and_die()+0x13d
V [libjvm.dylib+0xd1e4] report_vm_error(char const*, int, char const*, char const*)+0x84
V [libjvm.dylib+0x1f8be] resource_allocate_bytes(unsigned long)+0x14e
V [libjvm.dylib+0x9f10c7] methodOopDesc::make_invoke_method(KlassHandle, Symbol*, Symbol*, Handle, Thread*)+0x387
V [libjvm.dylib+0xbebd8d] SystemDictionary::find_method_handle_invoke(Symbol*, Symbol*, KlassHandle, Thread*)+0x36d
V [libjvm.dylib+0x8e7238] LinkResolver::lookup_implicit_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, Thread*)+0x108
V [libjvm.dylib+0x8e943e] LinkResolver::resolve_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, Thread*)+0xc7e
V [libjvm.dylib+0x8ed466] LinkResolver::linktime_resolve_virtual_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, Thread*)+0x36
V [libjvm.dylib+0x8ee539] LinkResolver::resolve_virtual_call(CallInfo&, Handle, KlassHandle, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, bool, Thread*)+0x59
V [libjvm.dylib+0x8ee758] LinkResolver::resolve_invokevirtual(CallInfo&, Handle, constantPoolHandle, int, Thread*)+0x1b8
V [libjvm.dylib+0x6c43ec] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x2ac
j ri.core.rtalk.RtCallSite.sendSmToRtalk([B)Z+79
j ri.experiment2.TestSm$1.run()V+7
The 0609 version worked at least past this point but the 0808 version gave a fatal error
# fatal error: memory leak: allocating without ResourceMark
V [libjvm.dylib+0x22ebd] VMError::report_and_die()+0x13d
V [libjvm.dylib+0xd1e4] report_vm_error(char const*, int, char const*, char const*)+0x84
V [libjvm.dylib+0x1f8be] resource_allocate_bytes(unsigned long)+0x14e
V [libjvm.dylib+0x9f10c7] methodOopDesc::make_invoke_method(KlassHandle, Symbol*, Symbol*, Handle, Thread*)+0x387
V [libjvm.dylib+0xbebd8d] SystemDictionary::find_method_handle_invoke(Symbol*, Symbol*, KlassHandle, Thread*)+0x36d
V [libjvm.dylib+0x8e7238] LinkResolver::lookup_implicit_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, Thread*)+0x108
V [libjvm.dylib+0x8e943e] LinkResolver::resolve_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, Thread*)+0xc7e
V [libjvm.dylib+0x8ed466] LinkResolver::linktime_resolve_virtual_method(methodHandle&, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, Thread*)+0x36
V [libjvm.dylib+0x8ee539] LinkResolver::resolve_virtual_call(CallInfo&, Handle, KlassHandle, KlassHandle, Symbol*, Symbol*, KlassHandle, bool, bool, Thread*)+0x59
V [libjvm.dylib+0x8ee758] LinkResolver::resolve_invokevirtual(CallInfo&, Handle, constantPoolHandle, int, Thread*)+0x1b8
V [libjvm.dylib+0x6c43ec] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x2ac
j ri.core.rtalk.RtCallSite.sendSmToRtalk([B)Z+79
j ri.experiment2.TestSm$1.run()V+7
- backported by
-
JDK-2215470 JSR 292: missing ResourceMark in methodOopDesc::make_invoke_method
-
- Resolved
-
-
JDK-2214878 JSR 292: missing ResourceMark in methodOopDesc::make_invoke_method
-
- Closed
-
- relates to
-
JDK-7056328 JSR 292 invocation sometimes fails in adapters for types not on boot class path
-
- Closed
-